// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusComponent matches snapshot 1`] = `
<div
  className="status-container"
>
  <Connect(StaticDevContent)>
    <StatusCircle />
     
    Status: On-Post
  </Connect(StaticDevContent)>
</div>
`;

exports[`StatusComponent matches snapshot when hideText is true 1`] = `
<div
  className="status-container"
>
  <Connect(StaticDevContent)>
    <StatusCircle />
     
  </Connect(StaticDevContent)>
</div>
`;
